--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "hf-security-scanner"
+name = "ai-model-security-scanner"
 version = "0.1.0"
 description = "Comprehensive security auditing tool for Hugging Face models"
 readme = "README.md"
